[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "future-motion"
version = "0.1.0"
description = "Common repo for our ongoing research on motion forecasting for self-driving cars."
authors = [
    { name = "Royden Wagner", email = "royden.wagner@kit.edu" },
    { name = "Ömer Sahin Tas", email = " tas@fzi.de " },
    { name = "Marlon Steiner", email = " marlon.steiner@kit.edu " }
]
license = { file = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
keywords = ["motion forecasting", "package"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "requests",
]

[project.urls]
Documentation = "https://github.com/KIT-MRT/future-motion/blob/main/README.md"
Repository = "https://github.com/KIT-MRT/future-motion"

[tool.setuptools]
packages = ["future_motion"]